syntax = "proto2";

package proto.data;

import "binning.proto";
import "categorical_temporal.proto";
import "cold_start.proto";
import "cross_column_pairgrams.proto";
import "date.proto";
import "deduplicate_tokens.proto";
import "feature_hash.proto";
import "graph.proto";
import "mach_label.proto";
import "recurrence.proto";
import "sequence.proto";
import "string_cast.proto";
import "string_concat.proto";
import "string_hash.proto";
import "string_id_lookup.proto";
import "text_tokenizer.proto";

message Transformation {
  message List {
    repeated Transformation transformations = 1;
  }

  oneof type {
    Binning binning = 1;
    CategoricalTemporal categorical_temporal = 2;
    ColdStart cold_start = 3;
    CountTokens count_tokens = 4;
    CrossColumnPairgrams cross_column_pairgrams = 5;
    Date date = 6;
    DeduplicateTokens deduplicate_tokens = 7;
    FeatureHash feature_hash = 8;
    GraphBuilder graph_builder = 9;
    HashedPositionEncoding hashed_position_encoding = 10;
    MachLabel mach_label = 11;
    NeighborFeatures neighbor_features = 12;
    NeighborIds neighbor_ids = 13;
    OffsetPositionEncoding offset_position_encoding = 14;
    RecurrenceAugmentation recurrence_augmentation = 15;
    RegressionBinning regression_binning = 16;
    StringCast string_cast = 17;
    StringConcat string_concat = 18;
    StringHash string_hash = 19;
    StringIDLookup string_id_lookup = 20;
    TextTokenizer text_tokenizer = 21;
    List list = 22;
  }
}